<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="24dp">

            <Button
                android:id="@+id/new_submit_entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:background="#2D92E3"
                android:padding="16dp"
                android:text="@string/new_submit_data_entry" />

            <TextView
                android:id="@+id/dashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:text="@string/dashboard"
                android:padding="10dp"
                android:textSize="24sp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/applications_submitted"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="2dp"
                android:gravity="left"
                android:text="@string/applications_submitted"
                android:textSize="17sp" />
            <TextView
                android:id="@+id/pending_approval"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="2dp"
                android:gravity="left"
                android:textSize="17sp"
                android:text="@string/pending_approval"/>
            <TextView
                android:id="@+id/applications_approved"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="2dp"
                android:textSize="17sp"
                android:text="@string/applications_approved"/>
            <TextView
                android:id="@+id/applications_rejected"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="2dp"
                android:textSize="17sp"
                android:text="@string/applications_rejected"/>
            <TextView
                android:id="@+id/lead_generated"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="2dp"
                android:textSize="17sp"
                android:text="@string/lead_generated"/>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>