<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewApplication">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <EditText
                android:id="@+id/data_entry_mobile_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/data_entry_mobileNumber"
                android:inputType="phone"
                android:textAlignment="center"
                android:padding="12dp"
                />
            <Button
                android:id="@+id/validate_mobileNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:background="#25D3EA"
                android:padding="12dp"
                android:text="@string/validate_mobileNumber"/>

            <LinearLayout
                android:id="@+id/innerApplication_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp"
                android:layout_marginTop="50dp"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible">

                <EditText
                    android:id="@+id/property_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/property_name"
                    android:textAlignment="center"
                    android:padding="12dp"/>
                <EditText
                    android:id="@+id/city_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/city_name"
                    android:padding="12dp"
                    android:textAlignment="center"/>
                <EditText
                    android:id="@+id/locality_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/Area_locality"
                    android:padding="12dp"
                    android:textAlignment="center"/>
                <EditText
                    android:id="@+id/owner_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/owner_name"
                    android:padding="12dp"
                    android:textAlignment="center"/>
                <EditText
                    android:id="@+id/preffered_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/preferedLanguage"
                    android:padding="12dp"
                    android:textAlignment="center"/>

                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:background="#25D3EA"
                    android:padding="12dp"
                    android:text="@string/submit_button"
                    android:textAlignment="center" />


            </LinearLayout>
        </LinearLayout>

    </ScrollView>
    <ProgressBar
        android:id="@+id/progressbarNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateBehavior="cycle"
        android:visibility="invisible" />


</RelativeLayout>